# chaogu

./: .gitignore  CLAUDE.md  README.md  audit_backtest.py  config.example.toml  pyproject.toml  run_backtest.py  run_scan.py  run_scheduled.py  web.py
cache/akshare/: _request_state.json
cache/akshare/akshare/: _request_state.json
cache/akshare/daily_history/: 510300_5484c402404ae9777e53b2d28e7b53c0.json  512880_415001f3b59ade14835eb65775df7e37.json
cache/akshare/intraday_history/: 510300_d4ec18508fc99df7cd9c23550408492c.json  512880_f011bf0df060937ce4b28e79fbfb5609.json
cache/akshare/sina/: _request_state.json
cache/akshare/spot_lookup/: all_7aba682e3c944745497e8c3c5843ce72.json
docs/superpowers/plans/: 2026-04-28-strategy-actual-trade.md
docs/superpowers/specs/: 2026-04-26-mysql-web-design.md  2026-04-28-strategy-actual-trade-design.md
logs/: upstream_requests.jsonl
scripts/: install_windows_task.ps1  run_daily_scan.ps1
src/chaogu_alert/: backtest.py  calendar.py  comparison.py  config.py  data.py  db.py  demo_data.py  emailer.py  engine.py  indicators.py  main.py  models.py  mysql_persistence.py  ocr.py  persistence.py  report.py  risk.py  scan_context.py  scheduled_main.py  scheduler.py  universe.py
src/chaogu_alert/strategies/: __init__.py  (+5 more)
static/: style.css
templates/: backtest_detail.html  backtest_list.html  base.html  compare.html  exec_buttons.html  holdings.html  optimize.html  performance.html  scan_detail.html  scan_list.html  scan_running.html  symbol_history.html  symbols.html  trades.html
tests/: test_comparison.py  test_engine.py
(+191 files in other folders)
